--- a/Tank Tactics.csproj
+++ b/Tank Tactics.csproj
@@ -9,4 +9,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Logic\Context\" />
+  </ItemGroup>
+
 </Project>
