Tank image added to main window with binding

--- a/Tank Tactics.csproj
+++ b/Tank Tactics.csproj
@@ -9,4 +9,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="tank.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="tank.png" />
+  </ItemGroup>
+
 </Project>
